<resources>
    <string name="app_name">Jokes, Quotes, And Trivia</string>
    <string name="newJoke">New Random Joke</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TriviaGame">Trivia game!</string>
    <string name="score">Score: %1$d / %2$d</string>
    <string name="submit">Submit Answer</string>
    <string name="exit">EXIT</string>
    <string name="trivia">Trivia</string>
    <string name="jokesQuotes">Jokes &amp; Quotes</string>
    <string name="newQuote">New Random Quote</string>
</resources>