<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/jokeText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/hello_blank_fragment"
        android:gravity="center"
        android:textSize="20sp"
        android:padding="10sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/glTextBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/newJoke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newJoke"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toTopOf="@id/newQuote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glTextBottom" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/newQuote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newQuote"
        app:layout_constraintBottom_toTopOf="@id/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newJoke" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newQuote" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTextBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="365dp" />

</androidx.constraintlayout.widget.ConstraintLayout>