<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="40sp"
        android:padding="10sp"
        android:layout_margin="40dp"
        android:elevation="15dp"
        android:background="@drawable/heading_background"
        android:textColor="@color/yellow_200"
        app:layout_constraintBottom_toTopOf="@id/glHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/jokeQuoteButton"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/jokesQuotes"
        app:layout_constraintBottom_toTopOf="@id/triviaButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glHeading"
        app:layout_constraintVertical_chainStyle="packed" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/triviaButton"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/trivia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jokeQuoteButton" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="398dp" />

</androidx.constraintlayout.widget.ConstraintLayout>